<resources>
    <string name="app_name">Droidsy Droids Clock</string>

    <!-- Button Labels -->
    <string name="clock_button">clock</string>
    <string name="stopwatch_button">stopwatch</string>
    <string name="timer_button">timer</string>
    <string name="focus_button">focus</string>
    <string name="alarm_button">alarm</string>
    <string name="worldclock_button">world clock</string>

    <string name="clock_button_ul"><b><u>clock</u></b></string>
    <string name="stopwatch_button_ul"><b><u>stopwatch</u></b></string>
    <string name="timer_button_ul"><b><u>timer</u></b></string>
    <string name="focus_button_ul"><b><u>focus</u></b></string>
    <string name="alarm_button_ul"><b><u>alarm</u></b></string>


    <!-- Alarm Labels -->
    <string name="alm1">alarm 1</string>
    <string name="alm2">alarm 2</string>
    <string name="alm3">alarm 3</string>
    <string name="alm4">alarm 4</string>
    <string name="alm5">alarm 5</string>


    <!-- Times -->
    <string name="am11">11:00 am</string>
    <string name="pm1">1:00 pm</string>
    <string name="pm3">3:00 pm</string>
    <string name="pm10">10:00 pm</string>
    <string name="pm11">11:00 pm</string>


    <!-- Alarm Page -->
    <string name="new_alm">new alarm</string>
    <string name="set">set</string>
    <string name="colon">:</string>

    <!-- Stopwatch Page -->
    <string name="start">start</string>
    <string name="timing">00:00:00</string>
    <string name="stopwatch_format">hr  min  sec</string>

    <!-- Focus Page -->
    <string name="work">work</string>
    <string name="brk1">short break</string>
    <string name="brk2">long break</string>
    <string name="wrk_time">00:30:00</string>
    <string name="brk1_time">00:05:00</string>
    <string name="brk2_time">00:10:00</string>
    <string name="lap">lap</string>


    <string name="set_colour_button_ul">set colour</string>
    <string name="start_colour">#574BCD</string>

    <string name="settings"><b>Settings</b></string>
    <string name="alarm_ringtone"><b>Alarm Tone</b></string>
    <string name="focus_ringtone"><b>Focus Tone</b></string>
    <string name="pages"><b>Visible Pages</b></string>

    <string name="customise"><b>Customise</b></string>
    <string name="theme"><b>Theme</b></string>
    <string name="apply"><b>Apply To</b></string>
    <string name="all_checkbox">All Pages</string>
    <string name="clock_checkbox">Clock Page</string>
    <string name="stopwatch_checkbox">Stopwatch Page</string>
    <string name="timer_checkbox">Timer Page</string>
    <string name="focus_checkbox">Focus Page</string>
    <string name="alarm_checkbox">Alarm Page</string>
    <string name="world_clock_checkbox">World Clock Page</string>
</resources>