<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:id="@+id/set_alarm_page">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_menu_24" />

    <ImageButton
        android:id="@+id/customise_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_palette_24" />

    <NumberPicker
        android:id="@+id/alrm_hr"
        android:layout_width="90dp"
        android:layout_height="400dp"
        android:layout_marginStart="40dp"
        android:theme="@style/picker"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/alrm_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/alrm_min"
        android:layout_width="90dp"
        android:layout_height="400dp"
        android:layout_marginEnd="40dp"
        android:theme="@style/picker"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/alrm_hr"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#000000"
        android:backgroundTint="#BF000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/clock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/clock_button"
            android:textAllCaps="false"
            android:textSize="11sp" />

        <Button
            android:id="@+id/alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/comfortaa_bold"
            android:minWidth="100dp"
            android:text="@string/alarm_button_ul"
            android:textAllCaps="false"
            android:textFontWeight="5"
            android:textSize="13sp" />

        <Button
            android:id="@+id/stopwatch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/comfortaa_bold"
            android:minWidth="120dip"
            android:text="@string/stopwatch_button"
            android:textAllCaps="false"
            android:textSize="11sp" />

        <Button
            android:id="@+id/timer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/timer_button"
            android:textAllCaps="false"
            android:textSize="11sp" />

        <Button
            android:id="@+id/focus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/focus_button"
            android:textAllCaps="false"
            android:textSize="11sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/alrm_hr"
        app:layout_constraintEnd_toStartOf="@+id/alrm_hr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alrm_hr"
        app:srcCompat="@drawable/ic_navigation_white_24dp_rotated" />

    <Button
        android:id="@+id/set_alm"
        android:layout_width="95dp"
        android:layout_height="38dp"
        android:background="@drawable/rectangle_3"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/set"
        android:textAllCaps="false"
        android:theme="@style/btns"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alrm_hr" />

    <TextView
        android:id="@+id/colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/colon"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/alrm_hr"
        app:layout_constraintEnd_toStartOf="@+id/alrm_min"
        app:layout_constraintStart_toEndOf="@+id/alrm_hr"
        app:layout_constraintTop_toTopOf="@+id/alrm_min" />

    <ImageButton
        android:id="@+id/set_alm_tone"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="30dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/set_alm"
        app:layout_constraintTop_toBottomOf="@+id/alrm_min"
        app:srcCompat="@drawable/alarm_tone" />

</androidx.constraintlayout.widget.ConstraintLayout>